--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			 src:url("//allekok.github.io/src/frontend/style/DroidNaskh-Regular.woff2") format("woff2");
 		 }
 		 a {
-			 color:#00E;
+			 color:#000;
 			 text-decoration:none;
 		 }
 		 body {
@@ -26,9 +26,8 @@
 			 font-size:1.5em;
 			 -webkit-appearance:none;
 			 border:0;
-			 border-bottom:2px solid #00E;
-			 border-top:2px solid #00E;
-			 box-shadow:0 10px 10px -12px #000;
+			 border-bottom:2px solid;
+			 border-top:2px solid;
 			 border-radius:0;
 			 padding:.5em 1em;
 			 width:100%;
@@ -38,16 +37,15 @@
 		 }
 		 input:focus {
 			 outline:0;
-			 border-bottom-color:#000;
-			 border-top-color:#000;
+			 border-color:#900;
 		 }
 		 #result {
-			 font-size:1.1em;
+			 font-size:1.05em;
 			 padding:.5em;
 		 }
 		 footer {
 			 padding:1em 0;
-			 font-size:1.1em;
+			 font-size:1.05em;
 		 }
 		</style>
 	</head>
@@ -79,6 +77,7 @@
 		 const n = sanitizing(number.value)
 		 result.innerHTML = kurdish_number_to_words(n)
 	 })
+	 window.addEventListener("load", () => number.focus())
 
 	 /* Functions */
 	 function convertNums(str, f, t) {
