index.html: Update repo's url.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div id="result"></div>
 		</main>
 		<footer>
-			<a href="https://github.com/allekok/kurdish-number-to-words">کۆد</a>
+			<a href="https://github.com/allekok/num-to-str">کۆد</a>
 			/
 			<a href="https://allekok.github.io/">بەرنامەکانی ئاڵەکۆک</a>
 		</footer>
